# PriceCrowd

./: .gitignore  README.md  docker-compose.yml  patch.diff
backend/: .env.example  Cargo.toml  README.md
backend/src/: main.rs  models.rs  router.rs  routes.rs  state.rs
backend/src/db/: mongo.rs
backend/src/handlers/: activities.rs  auth.rs  categories.rs  dev.rs  events.rs  export.rs  health.rs  insights.rs  mod.rs  operations.rs  products.rs  ratings.rs  settings.rs  stores.rs  uploads.rs  users.rs
backend/src/services/: auth.rs  common.rs  fns.rs  mod.rs  price.rs  receipt.rs  telegram.rs
backend/src/telegram/: mod.rs
docs/: architecture.md  database.md  presentation.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  auth.ts  index.css  main.ts
frontend/src/components/: CategoryTree.vue  CategoryTreeNode.vue
frontend/src/router/: index.ts
frontend/src/services/: fnsApi.ts
frontend/src/stores/: operations.ts
frontend/src/views/: About.vue  Admin.vue  AdminOperations.vue  AdminReceipts.vue  Cart.vue  Categories.vue  CategoryForm.vue  Heatmap.vue  Home.vue  Login.vue  Privacy.vue  ProductDetail.vue  ProductForm.vue  Products.vue  Profile.vue  Rating.vue  Reports.vue  ScanQR.vue  StoreActivity.vue  StoreDetail.vue  StoreForm.vue  Stores.vue
frontend/src/views/admin/: TelegramSettings.vue  Users.vue
telegram-bot/: main.py
