[package]
name = "pricecrowd-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
bson = "2.9"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
argon2 = "0.5"
chrono = { version = "0.4", features = ["clock", "serde"] }
rand = "0.8"
